--- a/about.html
+++ b/about.html
@@ -33,7 +33,13 @@
 
     <section class="container justify-content-center overflow-hidden vh-100 d-flex align-items-center flex-column">
         <div class="row text-center"><h1 class="display-1">El</h1></div>
-        <div class="row"><img src="media/img/layout horizontal.jpg" class="img-fluid vh-50" alt=""></div>
+        <div class="row">
+          <div class="scroll-video-container">
+            <video class="scroll-video" width="100%" height="auto" muted>
+              <source src="media/vid/Revista Eco.mp4" type="video/mp4">
+            </video>
+        </div>
+        </div>
         <div class="row text-center"><h1 class="display-1">Canto</h1></div>
     </section>
 
@@ -65,7 +71,7 @@
         </div>
     </section>
 
-    <section class="container-fluid">
+    <section class="container-fluid-g0">
         <div class="accordion accordion-flush" id="accordionFlushExample">
 
                 <div class="accordion-item">
@@ -78,12 +84,12 @@
                 <div class="accordion-body">
                     <div class="container">
                         <div class="row">
-                        <div class="col-8">
-                            <h1>Lorem ipsum</h1>
-                            <h3>Lorem ipsumLorem ipsum</h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium fugiat tenetur, velit hic ratione ipsum officia. Exercitationem quos asperiores omnis sequi illo nam deleniti eum ea. Libero vitae culpa nesciunt.</p>
+                        <div class="col-12 col-md-8">
+                            <h1 class="h1 gf">Gaspar Mayor</h1>
+                            <h3 class="h3 gf">Lorem ipsumLorem ipsum</h3>
+                            <p class="p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium fugiat tenetur, velit hic ratione ipsum officia. Exercitationem quos asperiores omnis sequi illo nam deleniti eum ea. Libero vitae culpa nesciunt.</p>
                         </div>
-                        <div class="col-4">
+                        <div class="col-12 col-md-4">
                             <img src="media/img/layout.avif" class="img-fluid" alt="">
                         </div>
                     </div>
@@ -102,12 +108,12 @@
                 <div class="accordion-body">
                     <div class="container">
                         <div class="row">
-                        <div class="col-8">
-                            <h1>Lorem ipsum</h1>
-                            <h3>Lorem ipsumLorem ipsum</h3>
+                        <div class="col-12 col-md-8">
+                            <h1 class="h1 hf">Héctor Asesio</h1>
+                            <h3 class="h3 hf">Lorem ipsumLorem ipsum</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium fugiat tenetur, velit hic ratione ipsum officia. Exercitationem quos asperiores omnis sequi illo nam deleniti eum ea. Libero vitae culpa nesciunt.</p>
                         </div>
-                        <div class="col-4">
+                        <div class="col-12 col-md-4">
                             <img src="media/img/layout.avif" class="img-fluid" alt="">
                         </div>
                     </div>
@@ -118,16 +124,19 @@
           </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@latest/dist/lenis.min.js"></script>
-    <script src="js/lenis-init.js"></script>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-
-        <script src="js/script.js"></script>
-
-        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-        <script>
-          AOS.init();
-        </script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="js/script.js"></script>
+  
+  
+      <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@latest/dist/lenis.min.js"></script>
+      <script src="js/lenis-init.js"></script>
+      
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  
+  
+          <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+          <script>
+            AOS.init();
+          </script>
   </body>
 </html>
